More rails 3 updates, and a couple layout issues (mobile centering)

--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -22,7 +22,7 @@ body {
 #navigator_bar {
 	text-align: left;
 	height: 31px;
-	width:310px;
+	width:300px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -37,13 +37,14 @@ body {
 	float: right;
 	position: relative;
 	color: white;
-	padding: 5px 22px 4px;
+    padding:5px 20px 4px 22px;
 }
 #startover {
 	float: left;
 	color: white;
 	padding: 1px 4px;
-	margin-right: 8px;
+	margin-left: -7px;
+	margin-right: 4px;
 	font-size: 0.65em;
 	height: 26px;
 }
